fix: 일반배차 정류장 기능 추가하면서 수정 잘못한 css 복구

--- a/dispatch/templates/dispatch/order.html
+++ b/dispatch/templates/dispatch/order.html
@@ -1020,7 +1020,7 @@
                 <div class="popupArticleBox popupArticleBoxAddBtn">
                     <div class="btnModules tourReservationAddBtn">추가</div>
                 </div>
-                <div class="popupArticleCategori categoriFlex">
+                <div class="popupArticleCategori categoryFlex">
                     <div class="first">예약자 명단</div>
                     <div class="second reservationCustomerCount">{{customer_list.count}}/{{tour.max_people}}</div>
                 </div>
