--- a/static/css/salary/table3.css
+++ b/static/css/salary/table3.css
@@ -318,7 +318,7 @@ background-color: #444444;
     border-right: 0.1rem solid #CDCDCE;;
 }
 .theadLegalAllowanceContentDoubleContentFirst{
-    width: 33.3%;
+    width: calc(100% / 3);
 }
 
 .theadAnother{
@@ -327,11 +327,11 @@ background-color: #444444;
 
 
 .theadLegalAllowanceContent > *{
-    width: 5.882352941176471%;
+    width: 6.25%;
 }
 
 .theadLegalAllowanceContentOne{
-    width: 5.882352941176471%;
+    width: 6.25%;
 }
 
 .theadLegalAllowanceContentOneTitle,
@@ -344,11 +344,11 @@ background-color: #444444;
 }
 
 .theadLegalAllowanceContentDouble{
-    width: 17.64705882352941%;
+    width: 18.75%;
 }
 
 .theadDouble{
-    width: 11.76470588235294%;
+    width: 12.5%;
 }
 
 .theadWeeklyExtension {
@@ -413,7 +413,7 @@ background-color: #444444;
 
 .tbodyLegalAllowance > *{
     
-    width: 5.882352941176471%;
+    width: 6.25%;
     border-right: 0.1rem solid #CDCDCE;
 }
 
@@ -462,7 +462,7 @@ background-color: #444444;
     justify-content: flex-start;
     font-size: 1.4rem;
     margin-top: 2rem;
-    width: calc(100% - 1rem);
+    width: 100%;
     height: 4rem;
     box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.16);
     box-sizing: border-box;
@@ -529,7 +529,7 @@ background-color: #444444;
 }
 
 .sumOrdinarySalary > *{
-    width: 33%;
+    width: calc(100% / 3);
     border-right: 0.1rem solid #CDCDCE;
 }
 
@@ -540,7 +540,7 @@ background-color: #444444;
 
 .sumLegalAllowance > *{
     
-    width: 5.882352941176471%;
+    width: 6.25%;
     border-right: 0.1rem solid #CDCDCE;
 }
 
@@ -733,7 +733,7 @@ background-color: #444444;
     width: 16.66666666666667%;
 }
 .theadCountTimeThDouble{
-    width: 33.33%;
+    width: calc(100% / 3);
 }
 
 .theadCountTime *{
@@ -761,7 +761,7 @@ background-color: #444444;
 }
 
 .tbodyCountTimeTd{
-    width: 16.66%;
+    width: calc(100% / 6);
     height: 100%;
     border-right: 0.1rem solid #CDCDCE;
 }
@@ -779,3 +779,7 @@ background-color: #444444;
 }
 
 .theadCountTime{display: block;}
+
+.borderRightNone{
+    border-right: none;
+}
