임금테이블 연차수당삭제, borderRight중복 제거

--- a/salary/templates/salary/table3.html
+++ b/salary/templates/salary/table3.html
@@ -108,7 +108,7 @@
                             <div class="theadCountTimeThTitle personalFlex">연장근로</div>
                             <div class="theadCountTimeThContent th flex">
                                 <div class="theadCountTimeThTh personalFlex th">법내</div>
-                                <div class="theadCountTimeThTh personalFlex th last">법외</div>
+                                <div class="theadCountTimeThTh personalFlex th borderRightNone">법외</div>
                             </div>
                         </div>
                         <div class="theadCountTimeTh personalFlex">야간</div>
@@ -116,7 +116,7 @@
                             <div class="theadCountTimeThTitle personalFlex borderRightNone">휴일근로</div>
                             <div class="theadCountTimeThContent flex borderRightNone">
                                 <div class="theadCountTimeThTh personalFlex ">8시간이하</div>
-                                <div class="theadCountTimeThTh personalFlex  last">8시간초과</div>
+                                <div class="theadCountTimeThTh personalFlex borderRightNone">8시간초과</div>
                             </div>
                         </div>
                     </div>
@@ -338,7 +338,7 @@
                     <div class="countTimeSumTd"></div>
                     <div class="countTimeSumTd"></div>
                     <div class="countTimeSumTd"></div>
-                    <div class="countTimeSumTd"></div>
+                    <div class="countTimeSumTd borderRightNone"></div>
                 </div>
                 <div class="sumOrdinarySalary" style="display: flex;">
                     <div class="wage">임금</div>
