임금테이블 연차수당삭제, borderRight중복 제거

--- a/salary/templates/salary/table3.html
+++ b/salary/templates/salary/table3.html
@@ -304,7 +304,7 @@
                         <div class="addCommaToInnerText"></div>
                         
                         <div class="tableEdit addCommaToInnerText"></div>
-                        <div class="addCommaToInnerText">{{current_data.deduction}}</div>
+                        <div class="addCommaToInnerText borderRightNone">{{current_data.deduction}}</div>
 
                     </div>
                     <div class="tbodyAdditionalAllowance tableEdit addCommaToInnerText">{{current_data.additional}}</div>
