--- a/templates/base.html
+++ b/templates/base.html
@@ -500,8 +500,8 @@
                   <a href="#" class="sideMenuNav2Link">급여관리</a>
                   <ul class="submenu">
                     <li>
-                      <a href="" class="sideMenuNav3Link">
-                        <div class="sideMenuNav3Menu">급여 분포도2?</div>
+                      <a href="{% url 'salary:distribution' %}" class="sideMenuNav3Link">
+                        <div class="sideMenuNav3Menu">급여 분포도2</div>
                       </a>
                     </li>
                     <li>
